--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -125,9 +125,9 @@ $tag-delete-margin: 1px !default
       width: 1px
     &:hover,
     &:focus
-      background-color: darken($tag-background-color, 5%)
+      background-color: bulmaDarken($tag-background-color, 5%)
     &:active
-      background-color: darken($tag-background-color, 10%)
+      background-color: bulmaDarken($tag-background-color, 10%)
   &.is-rounded
     border-radius: $radius-rounded
 
