--- a/sass/themes/default.sass
+++ b/sass/themes/default.sass
@@ -1,6 +1,7 @@
 \:root
   // Initial variables
   --black: #{$black}
+  --black-70: rgba(#000, 0.7)
   --black-bis: #{$black-bis}
   --black-ter: #{$black-ter}
   --grey-darker: #{$grey-darker}
@@ -43,65 +44,65 @@
   --radius-rounded: #{$radius-rounded}
   --speed: #{$speed}
   // Derived variables
-  --primary: var(--turquoise)
-  --info: var(--cyan)
-  --success: var(--green)
-  --warning: var(--yellow)
-  --danger: var(--red)
-  --light: var(--white-ter)
-  --dark: var(--grey-darker)
-  --orange-invert: #{findColorInvert($orange)}
-  --yellow-invert: #{findColorInvert($yellow)}
-  --green-invert: #{findColorInvert($green)}
-  --turquoise-invert: #{findColorInvert($turquoise)}
-  --cyan-invert: #{findColorInvert($cyan)}
-  --blue-invert: #{findColorInvert($blue)}
-  --purple-invert: #{findColorInvert($purple)}
-  --red-invert: #{findColorInvert($red)}
-  --primary-invert: #{findColorInvert($primary)}
-  --primary-light: findLightColor($primary)
-  --primary-dark: findDarkColor($primary)
-  --info-invert: #{findColorInvert($info)}
-  --info-light: findLightColor($info)
-  --info-dark: findDarkColor($info)
-  --success-invert: #{findColorInvert($success)}
-  --success-light: findLightColor($success)
-  --success-dark: findDarkColor($success)
-  --warning-invert: #{findColorInvert($warning)}
-  --warning-light: findLightColor($warning)
-  --warning-dark: findDarkColor($warning)
-  --danger-invert: #{findColorInvert($danger)}
-  --danger-light: findLightColor($danger)
-  --danger-dark: findDarkColor($danger)
-  --light-invert: #{findColorInvert($light)}
-  --dark-invert: #{findColorInvert($dark)}
-  --scheme-main: var(--white)
-  --scheme-main-bis: var(--white-bis)
-  --scheme-main-ter: var(--white-ter)
-  --scheme-invert: var(--black)
-  --scheme-invert-bis: var(--black-bis)
-  --scheme-invert-ter: var(--black-ter)
-  --background: var(--white-ter)
-  --border: var(--grey-lighter)
-  --border-hover: var(--grey-light)
-  --border-light: var(--grey-lightest)
-  --border-light-hover: var(--grey-light)
-  --text: var(--grey-dark)
-  --text-invert: #{findColorInvert($text)}
-  --text-light: var(--grey)
-  --text-strong: var(--grey-darker)
-  --code: var(--red)
-  --code-background: var(--background)
-  --pre: var(--text)
-  --pre-background: var(--background)
-  --link: var(--blue)
-  --link-invert: #{findColorInvert($link)}
-  --link-light: findLightColor($link)
-  --link-dark: findDarkColor($link)
-  --link-visited: var(--purple)
-  --link-hover: var(--grey-darker)
-  --link-hover-border: var(--grey-light)
-  --link-focus: var(--grey-darker)
-  --link-focus-border: var(--blue)
-  --link-active: var(--grey-darker)
-  --link-active-border: var(--grey-dark)
+  --primary: #{$primary}
+  --info: #{$info}
+  --success: #{$success}
+  --warning: #{$warning}
+  --danger: #{$danger}
+  --light: #{$light}
+  --dark: #{$dark}
+  --orange-invert: #{$orange-invert}
+  --yellow-invert: #{$yellow-invert}
+  --green-invert: #{$green-invert}
+  --turquoise-invert: #{$turquoise-invert}
+  --cyan-invert: #{$cyan-invert}
+  --blue-invert: #{$blue-invert}
+  --purple-invert: #{$purple-invert}
+  --red-invert: #{$red-invert}
+  --primary-invert: #{$primary-invert}
+  --primary-light: #{$primary-light}
+  --primary-dark: #{$primary-dark}
+  --info-invert: #{$info-invert}
+  --info-light: #{$info-light}
+  --info-dark: #{$info-dark}
+  --success-invert: #{$success-invert}
+  --success-light: #{$success-light}
+  --success-dark: #{$success-dark}
+  --warning-invert: #{$warning-invert}
+  --warning-light: #{$warning-light}
+  --warning-dark: #{$warning-dark}
+  --danger-invert: #{$danger-invert}
+  --danger-light: #{$danger-light}
+  --danger-dark: #{$danger-dark}
+  --light-invert: #{$light-invert}
+  --dark-invert: #{$dark-invert}
+  --scheme-main: #{$scheme-main}
+  --scheme-main-bis: #{$scheme-main-bis}
+  --scheme-main-ter: #{$scheme-main-ter}
+  --scheme-invert: #{$scheme-invert}
+  --scheme-invert-bis: #{$scheme-invert-bis}
+  --scheme-invert-ter: #{$scheme-invert-ter}
+  --background: #{$background}
+  --border: #{$border}
+  --border-hover: #{$border-hover}
+  --border-light: #{$border-light}
+  --border-light-hover: #{$border-light-hover}
+  --text: #{$text}
+  --text-invert: #{$text-invert}
+  --text-light: #{$text-light}
+  --text-strong: #{$text-strong}
+  --code: #{$code}
+  --code-background: #{$code-background}
+  --pre: #{$pre}
+  --pre-background: #{$pre-background}
+  --link: #{$link}
+  --link-invert: #{$link-invert}
+  --link-light: #{$link-light}
+  --link-dark: #{$link-dark}
+  --link-visited: #{$link-visited}
+  --link-hover: #{$link-hover}
+  --link-hover-border: #{$link-hover-border}
+  --link-focus: #{$link-focus}
+  --link-focus-border: #{$link-focus-border}
+  --link-active: #{$link-active}
+  --link-active-border: #{$link-active-border}
