--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,6 +1,6 @@
-$box-color: $text !default
-$box-background-color: $scheme-main !default
-$box-radius: $radius-large !default
+$box-color: var(--text, #{$text}) !default
+$box-background-color: var(--scheme-main, #{$scheme-main}) !default
+$box-radius: var(--radius-large, #{$radius-large}) !default
 $box-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02) !default
 $box-padding: 1.25rem !default
 
@@ -8,17 +8,24 @@ $box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0 0 1p
 $box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link !default
 
 .box
+  --box-background-color: #{$box-background-color}
+  --box-radius: #{$box-radius}
+  --box-shadow: #{$box-shadow}
+  --box-color: #{$box-color}
+  --box-padding: #{$box-padding}
+  --box-link-hover-shadow: #{$box-link-hover-shadow}
+  --box-link-active-shadow: #{$box-link-active-shadow}
   @extend %block
-  background-color: $box-background-color
-  border-radius: $box-radius
-  box-shadow: $box-shadow
-  color: $box-color
+  background-color: var(--box-background-color)
+  border-radius: var(--box-radius)
+  box-shadow: var(--box-shadow)
+  color: var(--box-color)
   display: block
-  padding: $box-padding
+  padding: var(--box-padding)
 
 a.box
   &:hover,
   &:focus
-    box-shadow: $box-link-hover-shadow
+    box-shadow: var(--box-link-hover-shadow)
   &:active
-    box-shadow: $box-link-active-shadow
+    box-shadow: var(--box-link-active-shadow)
