--- a/sass/utilities/derived-variables.scss
+++ b/sass/utilities/derived-variables.scss
@@ -1,12 +1,12 @@
-$primary: $turquoise !default;
+$primary: var(--turquoise, #{$turquoise}) !default;
 
-$info   : $cyan !default;
-$success: $green !default;
-$warning: $yellow !default;
-$danger : $red !default;
+$info   : var(--cyan, #{$cyan}) !default;
+$success: var(--green, #{$green}) !default;
+$warning: var(--yellow, #{$yellow}) !default;
+$danger : var(--red, #{$red}) !default;
 
-$light  : $white-ter !default;
-$dark   : $grey-darker !default;
+$light  : var(--white-ter, #{$white-ter}) !default;
+$dark   : var(--grey-darker, #{$grey-darker}) !default;
 
 // Invert colors
 
@@ -25,9 +25,9 @@ $primary-dark    : findDarkColor($primary) !default;
 $info-invert     : findColorInvert($info) !default;
 $info-light      : findLightColor($info) !default;
 $info-dark       : findDarkColor($info) !default;
-$success-invert  : findColorInvert($success) !default;
-$success-light   : findLightColor($success) !default;
-$success-dark    : findDarkColor($success) !default;
+$success-invert  : findColorInvert($success, $green) !default;
+$success-light   : findLightColor($success, $green) !default;
+$success-dark    : findDarkColor($success, $green) !default;
 $warning-invert  : findColorInvert($warning) !default;
 $warning-light   : findLightColor($warning) !default;
 $warning-dark    : findDarkColor($warning) !default;
@@ -39,57 +39,57 @@ $dark-invert     : findColorInvert($dark) !default;
 
 // General colors
 
-$scheme-main       : $white !default;
-$scheme-main-bis   : $white-bis !default;
-$scheme-main-ter   : $white-ter !default;
-$scheme-invert     : $black !default;
-$scheme-invert-bis : $black-bis !default;
-$scheme-invert-ter : $black-ter !default;
+$scheme-main       : var(--white, #{$white}) !default;
+$scheme-main-bis   : var(--white-bis, #{$white-bis}) !default;
+$scheme-main-ter   : var(--white-ter, #{$white-ter}) !default;
+$scheme-invert     : var(--black, #{$black}) !default;
+$scheme-invert-bis : var(--black-bis, #{$black-bis}) !default;
+$scheme-invert-ter : var(--black-ter, #{$black-ter}) !default;
 
-$background        : $white-ter !default;
+$background        : var(--white-ter, #{$white-ter}) !default;
 
-$border            : $grey-lighter !default;
-$border-hover      : $grey-light !default;
-$border-light      : $grey-lightest !default;
-$border-light-hover: $grey-light !default;
+$border            : var(--grey-lighter, #{$grey-lighter}) !default;
+$border-hover      : var(--grey-light, #{$grey-light}) !default;
+$border-light      : var(--grey-lightest, #{$grey-lightest}) !default;
+$border-light-hover: var(--grey-light, #{$grey-light}) !default;
 
 // Text colors
 
-$text       : $grey-dark !default;
+$text       : var(--grey-dark, #{$grey-dark}) !default;
 $text-invert: findColorInvert($text) !default;
-$text-light : $grey !default;
-$text-strong: $grey-darker !default;
+$text-light : var(--grey, #{$grey}) !default;
+$text-strong: var(--grey-darker, #{$grey-darker}) !default;
 
 // Code colors
 
-$code           : darken($red, 15%) !default;
-$code-background: $background !default;
+$code           : var(--red, #{darken($red, 15%)}) !default;
+$code-background: var(--background, #{$background}) !default;
 
-$pre            : $text !default;
-$pre-background : $background !default;
+$pre            : var(--text, #{$text}) !default;
+$pre-background : var(--background, #{$background}) !default;
 
 // Link colors
 
-$link              : $blue !default;
+$link              : var(--blue, #{$blue}) !default;
 $link-invert       : findColorInvert($link) !default;
 $link-light        : findLightColor($link) !default;
 $link-dark         : findDarkColor($link) !default;
-$link-visited      : $purple !default;
+$link-visited      : var(--purple, #{$purple}) !default;
 
-$link-hover        : $grey-darker !default;
-$link-hover-border : $grey-light !default;
+$link-hover        : var(--grey-darker, #{$grey-darker}) !default;
+$link-hover-border : var(--grey-light, #{$grey-light}) !default;
 
-$link-focus        : $grey-darker !default;
-$link-focus-border : $blue !default;
+$link-focus        : var(--grey-darker, #{$grey-darker}) !default;
+$link-focus-border : var(--blue, #{$blue}) !default;
 
-$link-active       : $grey-darker !default;
-$link-active-border: $grey-dark !default;
+$link-active       : var(--grey-darker, #{$grey-darker}) !default;
+$link-active-border: var(--grey-dark, #{$grey-dark}) !default;
 
 // Typography
 
-$family-primary  : $family-sans-serif !default;
-$family-secondary: $family-sans-serif !default;
-$family-code     : $family-monospace !default;
+$family-primary  : var(--family-sans-serif, #{$family-sans-serif}) !default;
+$family-secondary: var(--family-sans-serif, #{$family-sans-serif}) !default;
+$family-code     : var(--family-monospace, #{$family-monospace}) !default;
 
 $size-small : $size-7 !default;
 $size-normal: $size-6 !default;
