--- a/sass/utilities/derived-variables.scss
+++ b/sass/utilities/derived-variables.scss
@@ -19,9 +19,9 @@ $blue-invert     : findColorInvert($blue) !default;
 $purple-invert   : findColorInvert($purple) !default;
 $red-invert      : findColorInvert($red) !default;
 
-$primary-invert  : findColorInvert($primary) !default;
-$primary-light   : findLightColor($primary) !default;
-$primary-dark    : findDarkColor($primary) !default;
+$primary-invert  : findColorInvert($primary, $turquoise) !default;
+$primary-light   : findLightColor($primary, $turquoise) !default;
+$primary-dark    : findDarkColor($primary, $turquoise) !default;
 $info-invert     : findColorInvert($info) !default;
 $info-light      : findLightColor($info) !default;
 $info-dark       : findDarkColor($info) !default;
